# BidiReferenceC-Copied

./: CMakeLists.txt  README.txt
resource/: BidiBrackets.txt
script/: test.sh
src/: CMakeLists.txt  bidiref.c  bidiref1.c
src/include/: bidiref.h  bidirefp.h
src/shared/: brinput.c  brrule.c  brtable.c  brtest.c  brutils.c
tools/linux_pc/: FindGObject.cmake
